@@ -51,10 +51,12 @@ else:
   make clean
 
 Binaries are located in the 'bin' directory.
+Executables are always statically linked.
 
 Main available cmake flags:
 * To specify the install path: '-DCMAKE_INSTALL_PREFIX=/path'
 * To build the shared libraries: '-DBUILD_SHARED_LIBS:bool=on' (default: 'ON')
+  Note: when using this option, shared libraries are built but executables remain linked against the corresponding static libraries.
 * To build the CODEC executables: '-DBUILD_CODEC:bool=on' (default: 'ON')
 * To build the MJ2 executables: '-DBUILD_MJ2:bool=on' (default: 'OFF')
 * To build the JPWL executables and JPWL library: '-DBUILD_JPWL:bool=on' (default: 'OFF')
